[package]
name = "kotlins-editor-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.1.1"
async-std = { version = "1.12.0", features = ["unstable"] }
glib = "0.18.4"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
